[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
rust_kvs.workspace = true
tinyjson.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/qorix-group/testing_tools.git", tag = "v0.2.0" }
